added author remark

--- a/central_sensor_fusion.ipynb
+++ b/central_sensor_fusion.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Central sensor data processing using Kalman Filters"
+    "# Central sensor data processing using Kalman Filters\n",
+    "Author: André Brandenburger (<brandenburger@dismail.de>)"
    ]
   },
   {
